@@ -1,3 +1,13 @@
+2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Fixed a little issue. It was possible for the user in
+	  memory sound against tux to click on as many card she wants
+	  if she does not wait for the end of the sound.
+	  merged from trunk 3782
+
+	* src/boards/memory.c: (memory_next_level), (check_win),
+	(item_event):
+
 2009-03-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Fixed melody activity, some sound files was not correct which
